--- a/index.html
+++ b/index.html
@@ -1887,13 +1887,13 @@ var GioChat = (function() {
     if (q.includes('cbix') || q.includes('cbi'))
       return "CBIx is CBI's independent innovation subsidiary that I co-founded. We explore AI, tokenized assets, Web3, gaming, and next-gen banking models. Think of it as a startup inside a bank \u2014 but with the freedom to actually ship things.";
     if (q.includes('tokeniz') || q.includes('rwa'))
-      return "Tokenized assets are the bridge between TradFi and DeFi that actually makes sense. We're talking about putting real-world assets on-chain for better liquidity, transparency, and accessibility. I'm very bullish on RWAs.";
+      return "Tokenized assets are the bridge between TradFi and DeFi that actually makes sense. We're talking about putting real-world assets on-chain for better liquidity, transparency, and accessibility. I'm very bullish on RWAs, provided we fix liquidity issues and secondary trading. Tokenizing an illiquid asset doesnt make it liquid by defaukt.";
     if (q.includes('nft') || q.includes('collect'))
       return "I collect across chains \u2014 Bitcoin Ordinals, Ethereum, Solana. BAYC, Doodles, SMB, NodeMonkes, and incredible 1/1 pieces by Tony Tafuro and No Legs. Each piece represents a different identity or community.";
     if (q.includes('keynote') || q.includes('speak') || q.includes('book'))
       return "I'd love to chat about speaking opportunities! Best way to reach out is through the WhatsApp link on this site \u2014 my team will get back to you quickly.";
     if (q.includes('defi') || q.includes('crypto') || q.includes('web3'))
-      return "I'm a closeted DeFi maxi in a banker's suit \u2014 that's the honest truth. BTC and SOL maxi, terrible trader, great navigator. The Web3 communities I'm part of are some of the most authentic relationships I have.";
+      return "I'm a closeted DeFi maxi in a banker's suit \u2014 that's the honest truth. BTC and SOL maxi, terrible trader, great culture navigator. The Web3 communities I'm part of are some of the most authentic relationships I have.";
     return "Great question! I'm AI Gio \u2014 an experimental prototype. For the full answer, reach out to the real Gio via WhatsApp or LinkedIn. What else can I help with?";
   }
 
