--- a/index.html
+++ b/index.html
@@ -1884,12 +1884,14 @@ var GioChat = (function() {
   // ============================================================
   function fallback(input) {
     var q = input.toLowerCase();
-    if (q.includes('cbix') || q.includes('cbi')) return "CBIx is CBI\u2019s independent innovation subsidiary that I co-founded. We explore AI, tokenized assets, Web3, gaming, and next-gen banking models. Think startup inside a bank \u2014 but with freedom to actually ship things.";
-    if (q.includes('tokeniz') || q.includes('rwa')) return "Tokenized assets are the bridge between TradFi and DeFi that actually makes sense. Real-world assets on-chain for better liquidity, transparency, and accessibility. Very bullish on RWAs.";
-    if (q.includes('nft') || q.includes('collect')) return "I collect across chains \u2014 Bitcoin Ordinals, Ethereum, Solana. BAYC, Doodles, SMB, NodeMonkes, and incredible 1/1 pieces by Tony Tafuro and No Legs.";
+    if (q.includes('cbix') || q.includes('cbi')) return "CBIx is CBI\u2019s independent innovation subsidiary that I co-founded. We explore AI, tokenized assets, Web3, gaming, and next-gen banking models. Startup inside a bank \u2014 with freedom to actually ship things.";
+    if (q.includes('tokeniz') || q.includes('rwa')) return "Tokenized assets are the bridge between TradFi and DeFi that actually makes sense. Very bullish, IF we can fix the actual liquidity and secondary tradimg. TOkenizing illiquid assets and expect them to become liquid is NOT the way paduan";
+    if (q.includes('nft') || q.includes('collect')) return "I collect across chains \u2014 Bitcoin Ordinals, Ethereum, Solana. BAYC, Doodles, SOlana Monke Business, Apostles, and incredible 1/1 pieces by Tony Tafuro and No Legs.";
     if (q.includes('keynote') || q.includes('speak') || q.includes('book')) return "I\u2019d love to chat about speaking opportunities! Want me to pass your details to Gio\u2019s team? Share your name, email, and a quick note about the event.";
-    if (q.includes('defi') || q.includes('crypto') || q.includes('web3')) return "I\u2019m a closeted DeFi maxi in a banker\u2019s suit \u2014 that\u2019s the honest truth. BTC and SOL maxi, terrible trader, great navigator.";
-    return "Great question! I\u2019m AI Gio \u2014 an experimental prototype. For the full answer, reach out to the real Gio via WhatsApp or LinkedIn.";
+    if (q.includes('karaoke') || q.includes('song') || q.includes('rap')) return "Karaoke King is an official title. Stan by Eminem is the showstopper, but Forgot About Dre and Numb/Encore are crowd favorites. As Aristotle said, we are what we repeatedly do \u2014 I repeatedly murder karaoke mics.";
+    if (q.includes('drake') || q.includes('jay')) return "That\u2019s like asking me to pick a favorite child. Drake for the vibe, Jay-Z for the blueprint \u2014 pun intended. But if I\u2019m being honest, Drake\u2019s been the soundtrack to more of my life chapters.Name me a rapper with more quotables - except Wanye";
+    if (q.includes('defi') || q.includes('crypto') || q.includes('web3')) return "I\u2019m a closeted DeFi maxi in a banker\u2019s suit \u2014 that\u2019s the honest truth. BTC and SOL maxi, terrible trader, great culture navigator.";
+    return "Great question! I\u2019m AI Gio \u2014 an experimental prototype. For the full answer, reach out to the real Gio at giovannieverduin.com.";
   }
 
   // ============================================================
