--- a/ask/index.html
+++ b/ask/index.html
@@ -135,9 +135,9 @@ html,body{
 }
 @keyframes fadeUp{from{opacity:0;transform:translateY(20px)}to{opacity:1;transform:translateY(0)}}
 
-.w-av-wrap{position:relative;width:88px;height:88px}
-.w-av-canvas{position:absolute;inset:-8px;width:calc(100% + 16px);height:calc(100% + 16px);z-index:0;pointer-events:none}
-.w-av-img{position:relative;z-index:1;width:88px;height:88px;border-radius:50%;object-fit:cover;animation:avFloat 3s ease-in-out infinite}
+.w-av-wrap{position:relative;width:132px;height:132px}
+.w-av-canvas{position:absolute;inset:-10px;width:calc(100% + 20px);height:calc(100% + 20px);z-index:0;pointer-events:none}
+.w-av-img{position:relative;z-index:1;width:132px;height:132px;border-radius:50%;object-fit:cover;animation:avFloat 3s ease-in-out infinite}
 
 .welcome .proto-badge{
   display:inline-flex;align-items:center;gap:6px;
@@ -379,7 +379,7 @@ var App = (function() {
       hCanvas = $('av-canvas');
       wCanvas = $('w-av-canvas');
       if (hCanvas) { setupCanvas(hCanvas, 60, 60); hCtx = hCanvas.getContext('2d'); }
-      if (wCanvas) { setupCanvas(wCanvas, 104, 104); wCtx = wCanvas.getContext('2d'); }
+      if (wCanvas) { setupCanvas(wCanvas, 152, 152); wCtx = wCanvas.getContext('2d'); }
       loop();
     }
 
@@ -448,7 +448,7 @@ var App = (function() {
       if (wCtx && wCanvas && wel && wel.style.display !== 'none') {
         var ww = wCanvas.width / (window.devicePixelRatio || 1);
         wCtx.clearRect(0, 0, ww, ww);
-        drawRing(wCtx, ww / 2, ww / 2, 40, 2.5);
+        drawRing(wCtx, ww / 2, ww / 2, 60, 2.5);
       }
       requestAnimationFrame(loop);
     }
@@ -631,11 +631,11 @@ var App = (function() {
   function fallback(input) {
     var q = input.toLowerCase();
     if (q.includes('cbix') || q.includes('cbi')) return "CBIx is CBI\u2019s independent innovation subsidiary that I co-founded. We explore AI, tokenized assets, Web3, gaming, and next-gen banking models. Startup inside a bank \u2014 with freedom to actually ship things.";
-    if (q.includes('tokeniz') || q.includes('rwa')) return "Tokenized assets are the bridge between TradFi and DeFi that actually makes sense. Very bullish, IF we can fix the actual liquidity and secondary tradimg. TOkenizing illiquid assets and expect them to become liquid is NOT the way paduan";
-    if (q.includes('nft') || q.includes('collect')) return "I collect across chains \u2014 Bitcoin Ordinals, Ethereum, Solana. BAYC, Doodles, SOlana Monke Business, Apostles, and incredible 1/1 pieces by Tony Tafuro and No Legs.";
+    if (q.includes('tokeniz') || q.includes('rwa')) return "Tokenized assets are the bridge between TradFi and DeFi that actually makes sense. Very bullish, IF we can fix the actual liquidity and secondary trading. Tokenizing illiquid assets and expect them to become liquid is NOT the way padawan.";
+    if (q.includes('nft') || q.includes('collect')) return "I collect across chains \u2014 Bitcoin Ordinals, Ethereum, Solana. BAYC, Doodles, Solana Monke Business, Apostles, and incredible 1/1 pieces by Tony Tafuro and No Legs.";
     if (q.includes('keynote') || q.includes('speak') || q.includes('book')) return "I\u2019d love to chat about speaking opportunities! Want me to pass your details to Gio\u2019s team? Share your name, email, and a quick note about the event.";
     if (q.includes('karaoke') || q.includes('song') || q.includes('rap')) return "Karaoke King is an official title. Stan by Eminem is the showstopper, but Forgot About Dre and Numb/Encore are crowd favorites. As Aristotle said, we are what we repeatedly do \u2014 I repeatedly murder karaoke mics.";
-    if (q.includes('drake') || q.includes('jay')) return "That\u2019s like asking me to pick a favorite child. Drake for the vibe, Jay-Z for the blueprint \u2014 pun intended. But if I\u2019m being honest, Drake\u2019s been the soundtrack to more of my life chapters.Name me a rapper with more quotables - except Wanye";
+    if (q.includes('drake') || q.includes('jay')) return "That\u2019s like asking me to pick a favorite child. Drake for the vibe, Jay-Z for the blueprint \u2014 pun intended. But if I\u2019m being honest, Drake\u2019s been the soundtrack to more of my life chapters. Name me a rapper with more quotables - except Wayne.";
     if (q.includes('defi') || q.includes('crypto') || q.includes('web3')) return "I\u2019m a closeted DeFi maxi in a banker\u2019s suit \u2014 that\u2019s the honest truth. BTC and SOL maxi, terrible trader, great culture navigator.";
     return "Great question! I\u2019m AI Gio \u2014 an experimental prototype. For the full answer, reach out to the real Gio at giovannieverduin.com.";
   }
